# NNCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: activations.hpp  dense.hpp  layer.hpp  losses.hpp  matrix.hpp  neural_network.hpp  optimizer.hpp
src/: activations.cpp  dense.cpp  losses.cpp  matrix.cpp  neural_network.cpp  optimizer.cpp
